# LingoMate

./: .gitignore  README.md  TESTING-GUIDE.md  download-whisper-model.sh  fix-macos-permissions.sh  package-lock.json  package.json  test-availability.sh
.lingma/skills/: README.md
.lingma/skills/database-operations/: SKILL.md
.lingma/skills/lingomate-dev/: SKILL.md
.lingma/skills/prompt-design/: SKILL.md
.lingma/skills/react-component/: SKILL.md
.lingma/skills/tauri-command/: SKILL.md
.lingma/skills/testing/: SKILL.md
doc/: LingoMate 一体化桌面应用 技术架构与实施方案.MD  LingoMate 一体化桌面应用 技术架构与实施方案1.1.MD  LingoMate 一体化桌面应用 技术架构与实施方案2.0（综合版）.MD  LingoMate 项目需求文档.MD  LingoMate-API接口规范.md  LingoMate-MVP实施状态.md  LingoMate-Prompt工程规范.md  LingoMate-UI-UX设计规范.md  LingoMate-团队组织与技能要求.md  LingoMate-安全与隐私合规.md  LingoMate-数据库详细设计.md  LingoMate-框架构建指南.md  LingoMate-测试计划与用例.md  LingoMate-部署与打包指南.md  LingoMate-错误处理与日志规范.md  Whisper.cpp 的集成规划.md  英语私教APP-任务拆解.md  英语私教APP-模型安装.md  英语私教APP-模型选型.md  英语私教APP-需求讨论草稿.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/pages/: ChatPage.tsx  ProfilePage.tsx  ScenarioSelection.tsx  SettingsPage.tsx  VocabularyPage.tsx
frontend/src/services/: api.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  ollama.rs  stt.rs  stt_bridge.h  stt_bridge.m  test_stt.m  tts.rs
src-tauri/src/commands/: conversation.rs  data.rs  mod.rs  settings.rs  system.rs  voice.rs
src-tauri/src/database/: mod.rs
(+6 files in other folders)
